--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,17 +7,23 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html.dark {
+  --background: #121212;
+  --foreground: #ededed;
+}
+
+html,
+body,
+#__next {
+  height: 100%;
+  width: 100%;
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  overflow-y: auto;
 }
 
 @layer utilities {
